force-app/main/default/objects/Costos_de_Importacion__c/fields/Costo__c.field-meta.xml
<CustomField>
    <fullName>Costo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Costo</label>
    <referenceTo>Costo__c</referenceTo>
    <relationshipLabel>Costos de Importación</relationshipLabel>
    <relationshipName>Costos_de_Importacion</relationshipName>
    <type>Lookup</type>
</CustomField>