force-app/main/default/objects/Costos_de_Importacion__c/fields/Factura__c.field-meta.xml
<CustomField>
    <fullName>Factura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factura</label>
    <referenceTo>Factura__c</referenceTo>
    <relationshipLabel>Costos de Importación Facturados</relationshipLabel>
    <relationshipName>Costos_de_Importacion</relationshipName>
    <type>Lookup</type>
</CustomField>