force-app/main/default/objects/Costos_de_Importacion__c/fields/Guias_Importacion__c.field-meta.xml
<CustomField>
    <fullName>Guias_Importacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guías Importación</label>
    <referenceTo>Detalles_Guias_Importacion__c</referenceTo>
    <relationshipLabel>Costos de Importación</relationshipLabel>
    <relationshipName>Costos_de_Importacion</relationshipName>
    <type>Lookup</type>
</CustomField>